--- a/index.html
+++ b/index.html
@@ -32,15 +32,11 @@
 
     <section id="videos">
         <div class="container">
-            <h2>Meine neuesten Videos</h2>
+            <h2>WICHTIGE Videos</h2>
             <div class="video-grid">
                 <div class="video-item">
                     <iframe width="300" height="200" src="https://www.youtube.com/embed/VIDEO_LINK_1" frameborder="0" allowfullscreen></iframe>
-                    <h3>Titel des Videos 1</h3>
-                </div>
-                <div class="video-item">
-                    <iframe width="300" height="200" src="https://www.youtube.com/embed/VIDEO_LINK_2" frameborder="0" allowfullscreen></iframe>
-                    <h3>Titel des Videos 2</h3>
+                    <h3>Erstes Video</h3>
                 </div>
                 <div class="video-item">
             </div>
