--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <ul class="nav-links" id="nav-links">
             <li><a href="index.html">Startseite</a></li>
             <li><a href="about.html">Über uns</a></li>
-            <li><a href="genaures.html">Genaueres</a></li>
+            <li><a href="genaueres.html">Genaueres</a></li>
             <li><a href="kontakt.html">Kontakt</a></li>
         </ul>
     </nav>
